# rust-kratos

./: .env  .envrc  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.monitoring.yaml  docker-compose.yaml  project.json
config/app/: development.toml  docker_local.toml
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/hydra/: hydra.yaml  register_client.sh
config/keto/: keto.yaml
config/kratos/: google.mapper.jsonnet  identity.schema.json  kratos.yml
config/loki/: loki-config.yml
config/monitoring/alertmanager/: alertmanager.yml
config/monitoring/prometheus/: prometheus.yml
config/monitoring/promtail/: promtail-config.yml
config/oathkeeper/: oathkeeper.yaml  rules.yaml
config/prometheus/: prometheus.yml
docker/: docker-compose.app.yaml  docker-compose.hydra.yaml  docker-compose.keto.yaml  docker-compose.kratos.yaml  docker-compose.mailhog.yaml  docker-compose.monitoring.yaml  docker-compose.oathkeeper.yaml  docker-compose.yaml
kratos/: identity.schema.json  kratos.yml
src/: lib.rs  main.rs
src/application/: bootstrap.rs  config.rs  mod.rs
src/application/bootstrap/: bootstrap.rs  config.rs
src/application/handlers/: health_check.rs
src/application/usecases/: mod.rs
src/bootstrap/: bootstrap.rs  mod.rs
src/domain/: mod.rs
src/domain/auth/: inputs.rs  responses.rs
src/domain/entities/: user.rs
src/domain/graphql/: inputs.rs
src/domain/kratos/: flows.rs
src/domain/ports/: auth.rs  identity.rs  mod.rs  recovery.rs  registration.rs  session.rs  settings.rs  verification.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/di/: adapter_factory.rs  container.rs  factory.rs  mod.rs
src/presentation/graphql/: schema.rs
src/presentation/rest/: mod.rs  verification.rs
(+112 files in other folders)
