[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
async-graphql = "7.1.0"
async-graphql-actix-web = "7.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44" }
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.7"
dotenv = { version = "0.15.0" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0"
serde_json = { version = "1.0.149" }
async-trait = { version = "0.1.89" }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
config = "0.15.19"
actix-web-prometheus = "0.1.2"
